# MBU_Pull_Term_Data_From_GO_ATS

./: pyproject.toml
helpers/: taxonomy.py  taxonomy_data_handler.py  term_data_handler.py
processes/: process_item.py  queue_handler.py
